--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,5 @@ redis.poolMaxIdle=500
 redis.poolMaxWait=500
 
 ##security##
-jwt.secret=
-jwt.expiration=
+jwt.secret=clfSecret
+jwt.expiration=1296000
