--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,39 +1,1 @@
-##spring##
-server.port=8083
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/remarksystem?characterEncoding=utf-8&useSSL=false
-spring.datasource.username=username
-spring.datasource.password=password
-
-##mybatis##
-mybatis.mapper-locations=classpath:mappers/*.xml
-mybatis.type-aliases-package=com.uchain.remarksystem.model
-#mybatis.config-location=classpath:mybatis-config.xml
-
-##druid##
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.filters=stat
-spring.datasource.druid.max-active=1000
-spring.datasource.druid.initial-size=100
-spring.datasource.druid.max-wait=60000
-spring.datasource.druid.min-idle=100
-spring.datasource.druid.time-between-eviction-runs-millis=60000
-spring.datasource.druid.min-evictable-idle-time-millis=300000
-spring.datasource.druid.validation-query=select'x'
-spring.datasource.druid.test-while-idle=true
-spring.datasource.druid.test-on-borrow=false
-spring.datasource.druid.test-on-return=false
-spring.datasource.druid.pool-prepared-statements=true
-spring.datasource.druid.max-open-prepared-statements=20
-
-#redis
-redis.host=localhost
-redis.port=6379
-redis.timeout=10
-redis.poolMaxTotal=1000
-redis.poolMaxIdle=500
-redis.poolMaxWait=500
-
-##security##
-jwt.secret=test
-jwt.expiration=1296000
+spring.profiles.active=dev
