--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,8 +2,8 @@
 server.port=8083
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/remarksystem?characterEncoding=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=13458264160
+spring.datasource.username=username
+spring.datasource.password=password
 
 ##mybatis##
 mybatis.mapper-locations=classpath:mappers/*.xml
