--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ server.port=8083
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/remarksystem?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.password=200791989
 
 ##mybatis##
 mybatis.mapper-locations=classpath:mappers/*.xml
