--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,45 @@
 spring.profiles.active=prod
+
+##mybatis##
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.type-aliases-package=com.uchain.remarksystem.model
+#mybatis.config-location=classpath:mybatis-config.xml
+
+##druid##
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.filters=stat
+spring.datasource.druid.max-active=1000
+spring.datasource.druid.initial-size=100
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.min-idle=100
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.validation-query=select'x'
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.max-open-prepared-statements=20
+
+#redis
+redis.host=localhost
+redis.port=6379
+redis.timeout=10
+redis.poolMaxTotal=1000
+redis.poolMaxIdle=500
+redis.poolMaxWait=500
+
+#file
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+#应用维护
+#启用shutdown
+management.endpoint.shutdown.enabled=true
+management.endpoints.web.exposure.include=*
+# 自定义管理端点的前缀(保证安全)
+management.endpoints.web.base-path=/MyActuator
+# 自定义端口
+management.server.port=8083
+# 不允许远程管理连接(不允许外部调用保证安全)
+management.server.address=127.0.0.1
