--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 server.port=8083
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/remarksystem?characterEncoding=utf-8&useSSL=false
-spring.datasource.username=username
+spring.datasource.username=root
 spring.datasource.password=200791989
 
 ##security##
